added destinations section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+      integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>Travel Around The World</title>
   </head>
@@ -82,6 +89,70 @@
         </div>
       </div>
     </section>
-    section
+    <section class="countries">
+      <div class="count-container">
+        <div class="country count-1">
+          <div class="country-container">
+            <div class="location"><a href="">thailand</a></div>
+            <div class="down">
+              <a href="">Disney Land</a>
+              <span>
+                <i class="fas fa-star fa-lg"></i>
+                <i class="fas fa-star fa-lg"></i>
+                <i class="fas fa-star fa-lg"></i>
+                <i class="fas fa-star fa-lg"></i>
+                <i class="fas fa-star fa-lg"></i>
+              </span>
+            </div>
+          </div>
+        </div>
+        <div class="country count-2">
+          <div class="country-container">
+            <div class="location"><a href="">norway</a></div>
+            <div class="down">
+              <a href="">Besseggen Ridge</a>
+              <span>
+                <i class="fas fa-star fa-lg"></i>
+                <i class="fas fa-star fa-lg"></i>
+                <i class="fas fa-star fa-lg"></i>
+                <i class="fas fa-star fa-lg"></i>
+                <i class="fas fa-star fa-lg"></i>
+              </span>
+            </div>
+          </div>
+        </div>
+        <div class="country count-3">
+          <div class="country-container">
+            <div class="location"><a href="">new zealand</a></div>
+            <div class="down">
+              <a href="">Oxolotan City</a>
+              <span>
+                <i class="fas fa-star fa-lg"></i>
+                <i class="fas fa-star fa-lg"></i>
+                <i class="fas fa-star fa-lg"></i>
+                <i class="fas fa-star fa-lg"></i>
+                <i class="fas fa-star fa-lg"></i>
+              </span>
+            </div>
+          </div>
+        </div>
+        <div class="country count-4">
+          <div class="country-container">
+            <div class="location"><a href="">singapore</a></div>
+            <div class="down">
+              <a href="">Marina Bay Sand City</a>
+              <span>
+                <i class="fas fa-star fa-lg"></i>
+                <i class="fas fa-star fa-lg"></i>
+                <i class="fas fa-star fa-lg"></i>
+                <i class="fas fa-star fa-lg"></i>
+                <i class="fas fa-star fa-lg"></i>
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="more-destinations"><a href="">more destinations</a></div>
+    </section>
   </body>
 </html>
